2006-01-30 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: When selecting
	a field or property, add refactoring submenu for the member type.
	
	* MonoDevelop.Ide.Gui.Pads.ClassPad/NamespaceNodeBuilder.cs:
	* MonoDevelop.Ide.Gui.Pads.ClassPad/ProjectNodeBuilder.cs: Track
	changes in parser api.

2006-01-25  Jacob Ilsoe Christensen  <jacobilsoe@gmail.com>

	* Base.glade: Fixed spelling of add-in.

2006-01-25  Jacob Ilsoe Christensen  <jacobilsoe@gmail.com>

	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs:
	Make sure the correct tab is removed. Fixes bug 76900.

2006-01-24  Muthiah Annamalai  <gnumuthu@users.sf.net> 

	* Monodevelop.Core.Gui.Dialogs/NewFileDialog.cs:
	Added double-click response to expand category tree or  
	collapse tree, a toggle effect.

2006-01-24  Jacob Ilsoe Christensen  <jacobilsoe@gmail.com>

	* Base.glade: Fixed spelling mistake.

2006-01-24 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Templates/CombineDescriptor.cs: Added getter for
	the list of entry descriptors. Take the combine name from the new
	ProjectCreateInformation.CombineName property.
	* MonoDevelop.Ide.Templates/ProjectTemplate.cs: Added Id property
	(taken from the codon ID). Added CreateCombine method, which does
	what CreateProject was doing until now. CreateProject now creates
	a project but not a combine.
	
	* Base.glade:
	* MonoDevelop.Ide.Gui.Dialogs/NewProjectDialog.cs:  Some improvements
	in the new project dialog.
	
	* MonoDevelop.Ide.addin.xml: Use some new icons for new project and
	new solution. Moved here the BlankSolution template from the CSharpBinding.
	* Makefile.am: Added BlankSolution.
	
	* MonoDevelop.Ide.Gui/ProjectOperations.cs:
	* MonoDevelop.Ide.Commands/FileCommands.cs: Track api changes.

2006-01-23  Jacob Ilsoe Christensen  <jacobilsoe@gmail.com>

	* MonoDevelop.Ide.Codons/PadOptionCodon.cs:
	* MonoDevelop.Ide.Codons/PadCodon.cs:
	Added internationalization.
